apps/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seer
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: seer
  ports:
    - port: 5056
      targetPort: 5056
      name: http
