apps/seerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seer
  namespace: media
spec:
  rules:
    - host: seer.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seer
                port:
                  number: 5055
